--- a/frontend/src/.env
+++ b/frontend/src/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=https://localhost:3000
 REACT_APP_AUTH0_DOMAIN=dev-jbknh2mwlfpjcfsd.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=rbiWrEk3jaS43u6YFyyZ5H65eVaDsF6h
 REACT_APP_AUTH0_AUDIENCE=http://localhost:5000/api
